api/tests/snapshots/groups_routes__post_groups__400_empty_name.snap
---
source: tests/groups_routes.rs
expression: "json!({ \"status\": status, \"body\": body })"
---
{
  "body": {
    "error": "Group name is required"
  },
  "status": 400
}
