api/tests/snapshots/groups_routes__post_groups__400_whitespace_name.snap
---
source: tests/groups_routes.rs
expression: "json!({ \"status\": status, \"body\": body })"
---
{
  "body": {
    "error": "Group name cannot be empty"
  },
  "status": 400
}
