api/tests/snapshots/groups_routes__post_groups__happy.snap
---
source: tests/groups_routes.rs
expression: "json!({ \"status\": status, \"body\": body })"
---
{
  "body": {
    "group_id": 4,
    "message": "Group created successfully",
    "status": "success"
  },
  "status": 201
}
